18/09/2006 - Chris
	* - Fix bug parsing Sparse Bound variables in new parser

... - Chris
	* - Didn't bother keeping changelog for a while. Lots of changes.

03/04/2006 - Chris
	* - Fix bug with weighted sum weights = 0

03/03/2006 - RELEASE 0.4.1

03/03/2006 - Chris
    * Add 'print all' option

28/02/2006 - Chris
    * Fix bug in weighted sum (couldn't use negative powers)

26/02/2006 - Chris
    * Release 0.4.0

07/02/2006 - Chris
    * Lots of changes. 
    * Added different variable orders.
    * Added ability to perform SAC on first node (-preprocess)
    * Changed default table method to tries.
    * Fixed bug where Minion stops automatically after 2^32 nodes.

15/11/2006 - Chris
	* Made big changes in lots of files to change the standard domain size
	  from short to int. Might slow things down a little, but should keep
	  away domain overflow problems.

02/11/2006 - Ian G
        * Added -printsolsonly option to reduce size of output
          This will be useful if you want all solutions printed and there might be 
          very many or you want to avoid grep'ing to eliminate other lines. 
          It still prints out Minion version info at the start and summary info at 
          the end, and a couple of other lines I didn't notice to disable.

15/10/2006 - Chris
	* Really fixed the product constraint this time. The non-binary case
	  could still be improved when some of the variables can be negative.

15/10/2006 - Chris
	* I should probably be writing my Phd :)
	* Fixed 0/1 product constraint. We still don't get any decent level
	  of propagation on non-0/1 product constraints. Anyone want to try?

14/10/2006 - Chris
	* There was a bug with reading large number ( > 65000 ). Fixed that, at the
	  same time sped up parsing numbers.
	* Hopefully the testsuite works again now :)

11/10/2006 - Chris
	* Going to try to start to keep changelog up to date!
	* Replaced many occurrences of bool with BOOL. BOOL is defined to be