@@ -179,6 +179,8 @@ struct GACElementConstraint : public Constraint
   {
     indexvar.setMin(0);
 	indexvar.setMax(var_array.size() - 1);
+	resultvar.setMin(var_array_min_val);
+	resultvar.setMax(var_array_max_val);
 	for(unsigned i = 0; i < var_array.size() + 2; ++i)
 	  propogate(i,0);
   }
