@@ -1,2 +1,2 @@
-#define SVN_VER "648"
-#define SVN_DATE "2007-09-13 13:25:04 +0100 (Thu, 13 Sep 2007)"
+#define SVN_VER "653"
+#define SVN_DATE "2007-09-14 23:04:40 +0100 (Fri, 14 Sep 2007)"
